[workspace]
members = [
    "winio",
    "winio-primitive",
    "winio-callback",
    "winio-layout",
    "winio-handle",
    "winio-elm",
    "winio-pollable",
    "winio-ui-win32",
    "winio-ui-gtk",
]

resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/compio-rs/winio"

[workspace.dependencies]
winio-primitive = { path = "winio-primitive", version = "0.1.0" }
winio-callback = { path = "winio-callback", version = "0.1.0" }
winio-layout = { path = "winio-layout", version = "0.1.0" }
winio-handle = { path = "winio-handle", version = "0.1.0" }
winio-elm = { path = "winio-elm", version = "0.1.0" }
winio-pollable = { path = "winio-pollable", version = "0.1.0" }
winio-ui-win32 = { path = "winio-ui-win32", version = "0.1.0" }
winio-ui-gtk = { path = "winio-ui-gtk", version = "0.1.0" }

compio = "0.15.0"
compio-log = "0.1.0"

cfg-if = "1"
futures-util = "0.3"
image = { version = "0.25", default-features = false }
paste = "1.0"
rustix = "1"
scoped-tls = "1.0"

windows-sys = "0.60"

objc2 = "0.6"
objc2-app-kit = "0.3"

gtk4 = "0.9"

[profile.release]
lto = true
codegen-units = 1
