[workspace]
members = [
    "winio",
    "winio-primitive",
    "winio-callback",
    "winio-layout",
    "winio-handle",
    "winio-elm",
    "winio-pollable",
    "winio-ui-windows-common",
    "winio-ui-win32",
    "winio-ui-winui",
    "winio-ui-gtk",
    "winio-ui-qt",
    "winio-ui-app-kit",
]

resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/compio-rs/winio"

[workspace.dependencies]
winio-primitive = { path = "winio-primitive", version = "0.1.1" }
winio-callback = { path = "winio-callback", version = "0.1.1" }
winio-layout = { path = "winio-layout", version = "0.1.2" }
winio-handle = { path = "winio-handle", version = "0.4.0" }
winio-elm = { path = "winio-elm", version = "0.3.1" }
winio-pollable = { path = "winio-pollable", version = "0.2.1" }
winio-ui-windows-common = { path = "winio-ui-windows-common", version = "0.4.1" }
winio-ui-win32 = { path = "winio-ui-win32", version = "0.3.4" }
winio-ui-winui = { path = "winio-ui-winui", version = "0.3.4" }
winio-ui-gtk = { path = "winio-ui-gtk", version = "0.3.2" }
winio-ui-qt = { path = "winio-ui-qt", version = "0.3.2" }
winio-ui-app-kit = { path = "winio-ui-app-kit", version = "0.3.4" }

compio = "0.16.0"
compio-runtime = "0.9.1"
compio-log = "0.1.0"

bitflags = "2"
cfg-if = "1"
futures-util = "0.3"
image = { version = "0.25", default-features = false }
inherit-methods-macro = "0.1"
local-sync = "0.1"
once_cell = "1"
paste = "1.0"
percent-encoding = "2"
scoped-tls = "1.0"
thiserror = "2.0"
tuplex = "0.1"
widestring = "1"

windows-sys = "0.61"
windows = "0.62"
windows-core = "0.62"
winui3 = { version = "0.3.7", package = "winio-winui3" }
webview2 = { version = "0.1.0", package = "winio-webview2" }

send_wrapper = "0.6"
slim-detours-sys = "0.4"
sync-unsafe-cell = "0.1"

objc2 = "0.6"
objc2-app-kit = "0.3"

gtk4 = "0.10"

[profile.release]
lto = true
codegen-units = 1
