[workspace]
members = [
    "winio",
    "winio-primitive",
    "winio-callback",
    "winio-layout",
    "winio-handle",
    "winio-elm",
    "winio-pollable",
    "winio-ui-windows-common",
    "winio-ui-win32",
    "winio-ui-winui",
    "winio-ui-gtk",
    "winio-ui-qt",
    "winio-ui-app-kit",
    "winio-ui-android",
    "winio-ui-ui-kit",
    "winio-ui-apple-common",
    "winio-example",
]

resolver = "3"

[workspace.package]
edition = "2024"
readme = "README.md"
license = "MIT"
repository = "https://github.com/compio-rs/winio"

[workspace.dependencies]
winio-primitive = { path = "winio-primitive", version = "0.2.0" }
winio-callback = { path = "winio-callback", version = "0.1.2" }
winio-layout = { path = "winio-layout", version = "0.3.0-rc.1" }
winio-handle = { path = "winio-handle", version = "0.7.0-rc.2" }
winio-elm = { path = "winio-elm", version = "0.6.0-rc.1" }
winio-pollable = { path = "winio-pollable", version = "0.5.0-rc.3" }
winio-ui-windows-common = { path = "winio-ui-windows-common", version = "0.7.0-rc.4" }
winio-ui-win32 = { path = "winio-ui-win32", version = "0.6.0-rc.5" }
winio-ui-winui = { path = "winio-ui-winui", version = "0.6.0-rc.4" }
winio-ui-gtk = { path = "winio-ui-gtk", version = "0.6.0-rc.4" }
winio-ui-qt = { path = "winio-ui-qt", version = "0.6.0-rc.5" }
winio-ui-app-kit = { path = "winio-ui-app-kit", version = "0.6.0-rc.4" }
winio-ui-android = { path = "winio-ui-android", version = "0.1.0-rc.4" }
winio-ui-ui-kit = { path = "winio-ui-ui-kit", version = "0.1.0-rc.4" }
winio-ui-apple-common = { path = "winio-ui-apple-common", version = "0.1.0-rc.2" }
winio = { path = "winio", version = "0.12.0-rc.3", default-features = false }

compio = { version = "0.19.0", default-features = false }
compio-log = "0.2.0"

arrayvec = "0.7"
bitflags = "2"
cfg-if = "1"
cookie = "0.18"
futures-channel = "0.3"
futures-util = "0.3"
html-escape = "0.2"
image = { version = "0.25", default-features = false }
inherit-methods-macro = "0.1"
local-sync = "0.1"
once_cell = "1"
oneshot = { version = "0.2", default-features = false }
paste = "1.0"
percent-encoding = "2"
scoped-tls = "1.0"
slab = "0.4"
thiserror = "2.0"
time = "0.3"
tuplex = "0.1"
widestring = "1"

windows-sys = "0.61"
windows = "0.62"
windows-core = "0.62"
winui3 = { version = "0.4.1", package = "winio-winui3" }
webview2 = { version = "0.2.0", package = "winio-webview2" }

send_wrapper = "0.6"
slim-detours-sys = "0.4"
sync-unsafe-cell = "0.1"

block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-av-foundation = "0.3"
objc2-av-kit = "0.3"
objc2-core-foundation = "0.3"
objc2-core-graphics = "0.3"
objc2-core-media = "0.3"
objc2-core-text = "0.3"
objc2-foundation = "0.3"
objc2-ui-kit = "0.3"
objc2-uniform-type-identifiers = "0.3"
objc2-web-kit = "0.3"

gtk4 = "0.11"
gdk4-wayland = "0.11"
gdk4-x11 = "0.11"
glib-unix = "0.22"
pangocairo = "0.22"
webkit6 = "0.6"

plotters-backend = "0.3"

android-activity = "0.6"
jni = "0.22.4"

raw-window-handle = "0.6"
wgpu = { version = "29", default-features = false }

[profile.release]
lto = true
codegen-units = 1
