[package]
name = "winio-elm"
version = "0.3.0"
description = "ELM framework for winio."
edition = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
winio-primitive = { workspace = true, optional = true }
winio-layout = { workspace = true, optional = true }
winio-handle = { workspace = true, optional = true }

futures-util = { workspace = true }
inherit-methods-macro = { workspace = true, optional = true }
paste = { workspace = true }
smallvec = "1"

[features]
handle = ["dep:winio-handle"]
layout = [
    "dep:winio-layout",
    "dep:winio-primitive",
    "dep:inherit-methods-macro",
]
