[package]
name = "winio-elm"
version = "0.3.4"
description = "ELM framework for winio."
edition = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
winio-primitive = { workspace = true }
winio-handle = { workspace = true, optional = true }

async-stream = "0.3"
futures-util = { workspace = true }
inherit-methods-macro = { workspace = true }
paste = { workspace = true }
smallvec = "1"

[dev-dependencies]
compio = { workspace = true, features = ["macros"] }

[features]
handle = ["dep:winio-handle"]
