[package]
name = "winio-elm"
version = "0.4.0"
description = "ELM framework for winio."
edition = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
winio-primitive = { workspace = true, optional = true }
winio-handle = { workspace = true, optional = true }

async-stream = "0.3"
futures-util = { workspace = true }
inherit-methods-macro = { workspace = true, optional = true }
paste = { workspace = true }
smallvec = "1"
tuplex = { workspace = true }

[dev-dependencies]
compio = { workspace = true, features = ["macros"] }

[features]
handle = ["dep:winio-handle"]
primitive = ["dep:winio-primitive", "dep:inherit-methods-macro"]

gen_blocks = []
nightly = ["gen_blocks"]
