[package]
name = "winio-example"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
winio = { workspace = true }

futures-util = { workspace = true }
tracing-subscriber = "0.3"

compio-log = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { workspace = true }
tracing_android_trace = "0.1.0"

[features]
default = ["enable_log"]
enable_log = ["winio/enable_log", "compio-log/enable_log"]

nightly = ["winio/nightly"]
compio-compat = ["winio/compio-compat"]
