[package]
name = "winio-example"
version = "0.1.0"
edition.workspace = true

[lib]
name = "main"

[dependencies]
winio = { workspace = true }
compio = { workspace = true, default-features = true, features = [
    "time",
    "rustls",
    "ring",
] }
compio-log = { workspace = true }
cyper = { version = "0.9.0", default-features = false, features = [
    "rustls",
    "http2",
    "http3-altsvc",
] }
cyper-axum = "0.9.0"
axum = { version = "0.8", default-features = false }

anyhow = "1"
bytemuck = { version = "1", optional = true, features = ["derive"] }
cfg-if = { workspace = true }
cgmath = { version = "0.18", optional = true }
dirs = "6.0"
futures-util = { workspace = true }
image = { workspace = true, features = ["default-formats"] }
inherit-methods-macro = { workspace = true }
itertools = "0.15"
local-sync = { workspace = true }
plotters = { version = "0.3", default-features = false, features = [
    "line_series",
] }
plotters-backend = { workspace = true, optional = true }
pulldown-cmark = "0.13"
send_wrapper = { workspace = true, features = ["futures"] }
tracing-subscriber = "0.3"
url = "2"
wgpu = { workspace = true, optional = true, features = ["wgsl"] }

[target.'cfg(target_os = "android")'.dependencies]
tracing_android_trace = "0.1.0"

jni = { workspace = true }
rustls-platform-verifier = "0.7.0"

[features]
default = ["enable_log"]
enable_log = ["winio/enable_log", "compio-log/enable_log"]

media = ["winio/media"]
webview = ["winio/webview"]
plotters = ["winio/plotters", "dep:plotters-backend"]
compio-compat = ["winio/compio-compat"]
wgpu = ["winio/wgpu", "dep:wgpu", "dep:bytemuck", "dep:cgmath"]
all = ["media", "webview", "plotters", "wgpu", "compio-compat"]

nightly = [
    "winio/nightly",
    "compio/nightly",
    "cyper/nightly",
    "cyper-axum/nightly",
]

[package.metadata.bundle]
name = "Widgets"
identifier = "rs.compio.winio.widgets"
