[package]
name = "winio-layout"
version = "0.1.1"
description = "Layouts for winio."
edition = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
winio-primitive = { workspace = true }

paste = { workspace = true }
taffy = "0.9"
