[package]
name = "winio-layout"
version = "0.3.0-rc.1"
description = "Layouts for winio."
edition = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
winio-primitive = { workspace = true }

paste = { workspace = true }
taffy = "0.11"
thiserror = { workspace = true }
