[package]
name = "winio-pollable"
version = "0.4.0"
description = "A thin wrapper over compio-runtime to make it pollable."
edition = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
compio = { workspace = true, features = ["runtime"] }

futures-util = { workspace = true }
scoped-tls = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "1", features = ["event"] }
