[package]
name = "winio-pollable"
version = "0.4.0"
description = "A thin wrapper over compio-runtime to make it pollable."
edition = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
futures-util = { workspace = true }
scoped-tls = { workspace = true }
