[package]
name = "winio-pollable"
version = "0.5.0-rc.1"
description = "A thin wrapper over compio-runtime to make it pollable."
edition = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
winio-callback = { workspace = true, optional = true }

futures-util = { workspace = true }
scoped-tls = { workspace = true }

[features]
callback = ["dep:winio-callback"]
