[package]
name = "winio-ui-android"
version = "0.1.0"
description = "Android backend for winio."
edition = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]

[target.'cfg(target_os = "android")'.dependencies]
winio-primitive = { workspace = true }
winio-callback = { workspace = true }
winio-handle = { workspace = true }
winio-pollable = { workspace = true }

compio = { workspace = true, default-features = false }
compio-log = { workspace = true }

android-activity = { workspace = true, features = ["game-activity"] }
jni = { workspace = true }
jni-min-helper = "0.4"
ndk-sys = "0.6"

futures-channel = { workspace = true }
futures-util = { workspace = true }
image = { workspace = true, default-features = false }
inherit-methods-macro = { workspace = true }
oneshot = { workspace = true, features = ["std", "async"] }
thiserror = { workspace = true }

[features]
media = []
webview = []

compio-compat = ["compio/compat-futures"]
