[package]
name = "winio-ui-android"
version = "0.1.0-rc.1"
description = "Android backend for winio."
edition = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

include = [
    "src/*",
    "maven/pom.xml",
    "maven/compio/winio/**/",
    "maven/compio/winio/maven-metadata-local.xml",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["aarch64-linux-android"]

[target.'cfg(target_os = "android")'.dependencies]
winio-primitive = { workspace = true }
winio-callback = { workspace = true }
winio-handle = { workspace = true }
winio-pollable = { workspace = true }

compio = { workspace = true, default-features = false }
compio-log = { workspace = true }

android-activity = { workspace = true, features = ["game-activity"] }
jni = { workspace = true }
jni-min-helper = "0.4"
ndk-sys = "0.6"

futures-channel = { workspace = true }
futures-util = { workspace = true }
image = { workspace = true, default-features = false }
inherit-methods-macro = { workspace = true }
oneshot = { workspace = true, features = ["std", "async"] }
rustix = { version = "1", optional = true, features = ["time"] }
thiserror = { workspace = true }
wgpu = { workspace = true, optional = true, features = ["vulkan"] }

[features]
media = []
webview = []
wgpu = ["dep:wgpu"]
compio-compat = ["compio/compat", "dep:rustix", "compio/fs"]
