[package]
name = "winio-ui-app-kit"
version = "0.1.0"
description = "AppKit backend for winio."
edition = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
winio-primitive = { workspace = true }
winio-handle = { workspace = true }
winio-callback = { workspace = true }
winio-pollable = { workspace = true }

compio = { workspace = true, features = ["arrayvec"] }

inherit-methods-macro = { workspace = true }
image = { workspace = true, default-features = false }
local-sync = { workspace = true }
scoped-tls = { workspace = true }

block2 = "0.6"
objc2 = { workspace = true }
objc2-core-foundation = "0.3"
objc2-core-graphics = "0.3"
objc2-core-text = "0.3"
objc2-foundation = "0.3"
objc2-app-kit = { workspace = true, features = [
    "objc2-uniform-type-identifiers",
] }
objc2-uniform-type-identifiers = "0.3"

[features]
objc-static = [
    "objc2/unstable-static-class-inlined",
    "objc2/unstable-static-sel-inlined",
    "objc2-foundation/unstable-static-nsstring",
]
