[package]
name = "winio-ui-gtk"
version = "0.6.0-rc.1"
description = "GTK backend for winio."
edition = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[target.'cfg(not(any(windows, target_os = "macos")))'.dependencies]
winio-primitive = { workspace = true }
winio-handle = { workspace = true, features = ["gtk"] }
winio-callback = { workspace = true }
winio-pollable = { workspace = true, features = ["callback"] }

compio = { workspace = true, default-features = false, optional = true }
compio-log = { workspace = true }

inherit-methods-macro = { workspace = true }
image = { workspace = true }
local-sync = { workspace = true, optional = true }
thiserror = { workspace = true }

gtk4 = { workspace = true, features = ["v4_14"] }
glib-unix = { workspace = true, optional = true }
pangocairo = { workspace = true }
webkit6 = { workspace = true, optional = true }

[features]
media = []
webview = ["dep:webkit6"]

compio-compat = [
    "compio/runtime",
    "compio/compat",
    "dep:local-sync",
    "dep:glib-unix",
]
