[package]
name = "winio-ui-gtk"
version = "0.6.0-rc.3"
description = "GTK backend for winio."
edition = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[target.'cfg(not(any(windows, target_vendor = "apple", target_os = "android")))'.dependencies]
winio-primitive = { workspace = true }
winio-handle = { workspace = true, features = ["gtk"] }
winio-callback = { workspace = true }
winio-pollable = { workspace = true, features = ["callback"] }

compio = { workspace = true, default-features = false, optional = true }
compio-log = { workspace = true }

cookie = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
inherit-methods-macro = { workspace = true }
image = { workspace = true }
local-sync = { workspace = true, optional = true }
thiserror = { workspace = true }
wgpu = { workspace = true, optional = true, features = ["vulkan"] }

gtk4 = { workspace = true, features = ["v4_14"] }
glib-unix = { workspace = true, optional = true }
pangocairo = { workspace = true }
webkit6 = { workspace = true, optional = true, features = ["v2_42"] }
gdk4-wayland = { workspace = true, optional = true, features = [
    "wayland_crate",
] }
gdk4-x11 = { workspace = true, optional = true, features = ["xlib"] }

[features]
media = []
webview = ["dep:webkit6", "dep:cookie"]
wgpu = ["dep:wgpu", "dep:gdk4-wayland", "dep:gdk4-x11"]
compio-compat = [
    "compio/runtime",
    "compio/compat",
    "dep:futures-util",
    "dep:glib-unix",
    "dep:local-sync",
]
