[package]
name = "winio-ui-qt"
version = "0.6.0-rc.2"
description = "Qt backend for winio."
edition = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[target.'cfg(not(any(windows, target_vendor = "apple")))'.dependencies]
winio-primitive = { workspace = true }
winio-handle = { workspace = true, features = ["qt"] }
winio-callback = { workspace = true }
winio-pollable = { workspace = true, features = ["callback"] }

compio = { workspace = true, default-features = false, optional = true }
compio-log = { workspace = true }

bitflags = { workspace = true }
html-escape = { workspace = true }
inherit-methods-macro = { workspace = true }
image = { workspace = true }
local-sync = { workspace = true }
scoped-tls = { workspace = true }
thiserror = { workspace = true }
wgpu = { workspace = true, optional = true, features = ["vulkan"] }

cxx = { version = "1.0.160", features = ["c++17"] }

[build-dependencies]
cxx-build = { version = "1.0.160" }
qt-build-utils = { version = "0.8" }

[features]
media = []
webview = []
wgpu = ["dep:wgpu"]
compio-compat = ["compio/runtime", "compio/compat"]

opengl = []
