[package]
name = "winio-ui-ui-kit"
version = "0.1.0-rc.1"
description = "UI Kit backend for winio."
edition = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[target.'cfg(target_os = "ios")'.dependencies]
winio-primitive = { workspace = true }
winio-handle = { workspace = true }
winio-callback = { workspace = true }
winio-pollable = { workspace = true, features = ["callback"] }

compio = { workspace = true, default-features = false, optional = true }
compio-log = { workspace = true }

arrayvec = { workspace = true }
futures-util = "0.3"
image = { workspace = true }
inherit-methods-macro = { workspace = true }
local-sync = { workspace = true }
thiserror = { workspace = true }

block2 = { workspace = true }
dispatch2 = "0.3"
objc2 = { workspace = true, features = ["exception"] }
objc2-av-kit = { workspace = true, optional = true }
objc2-av-foundation = { workspace = true, optional = true }
objc2-core-foundation = { workspace = true }
objc2-core-graphics = { workspace = true }
objc2-core-media = { workspace = true, optional = true }
objc2-core-text = { workspace = true }
objc2-foundation = { workspace = true }
objc2-ui-kit = { workspace = true }
objc2-web-kit = { workspace = true, optional = true }

[features]
media = ["dep:objc2-av-kit", "dep:objc2-av-foundation", "dep:objc2-core-media"]
webview = ["dep:objc2-web-kit"]

compio-compat = ["compio/compat-futures"]

objc-static = [
    "objc2/unstable-static-class-inlined",
    "objc2/unstable-static-sel-inlined",
    "objc2-foundation/unstable-static-nsstring",
]
