[package]
name = "winio-ui-ui-kit"
version = "0.1.0-rc.3"
description = "UI Kit backend for winio."
edition = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["aarch64-apple-ios"]

[target.'cfg(target_os = "ios")'.dependencies]
winio-primitive = { workspace = true }
winio-handle = { workspace = true }
winio-callback = { workspace = true }
winio-pollable = { workspace = true, features = ["callback"] }
winio-ui-apple-common = { workspace = true }

compio = { workspace = true, default-features = false, optional = true }
compio-log = { workspace = true }

futures-util = { workspace = true }
image = { workspace = true }
inherit-methods-macro = { workspace = true }
local-sync = { workspace = true }
slab = { workspace = true }
thiserror = { workspace = true }
wgpu = { workspace = true, optional = true, features = ["metal"] }

block2 = { workspace = true }
dispatch2 = "0.3"
objc2 = { workspace = true, features = ["exception"] }
objc2-core-foundation = { workspace = true }
objc2-core-graphics = { workspace = true }
objc2-core-text = { workspace = true }
objc2-foundation = { workspace = true }
objc2-ui-kit = { workspace = true, features = [
    "objc2-uniform-type-identifiers",
] }
objc2-uniform-type-identifiers = { workspace = true }
objc2-av-foundation = { workspace = true, features = [
    "objc2-core-media",
], optional = true }
objc2-core-media = { workspace = true, optional = true }
objc2-web-kit = { workspace = true, optional = true }

[features]
media = ["dep:objc2-av-foundation", "dep:objc2-core-media"]
webview = ["dep:objc2-web-kit"]
wgpu = ["dep:wgpu"]
compio-compat = ["compio/compat-futures", "compio/fs"]

objc-static = ["winio-ui-apple-common/objc-static"]
